--- a/src/components/ref/ref.scss
+++ b/src/components/ref/ref.scss
@@ -1,9 +1,9 @@
 .ref {
-  width: 100%;
+  display: inline-block;
   color: black;
   text-decoration: none;
   transition: color 0.1s linear;
-  margin: 0 5px;
+  margin: 5px;
 
   &:hover {
     color: white;
@@ -11,9 +11,10 @@
 }
 
 .ref__children {
+  width: 60px;
+  padding: 15px 0;
   border: 1px solid black;
   border-radius: 10px;
-  padding: 20px;
   text-align: center;
   font-size: 30px;
   transition: background-color 0.1s linear;
