--- a/src/components/word/word.scss
+++ b/src/components/word/word.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 90vh;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .word__visible {
