--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -3,10 +3,15 @@
   background-color: #fff;
   border-radius: 5px;
   border: 1px solid black;
-  background-color: rgb(232, 239, 255);
+  background-color: #99c7fc;
   text-align: center;
   vertical-align: middle;
   font-size: 20px;
-  color: gray;
+  color: white;
+  transition: 0.1s linear color;
   cursor: pointer;
+
+  &:hover {
+    color: black;
+  }
 }
