--- a/src/components/edit/edit.scss
+++ b/src/components/edit/edit.scss
@@ -62,3 +62,14 @@
   transform: scale(0);
   transition: transform 0.1s linear;
 }
+
+.edit__new {
+  width: 0;
+  transform: scale(0);
+  transition: transform 0.1s linear;
+}
+
+.edit__new--active {
+  width: auto;
+  transform: scale(1);
+}
