--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+$body: aliceblue;
+$blue: #99c7fc;
+
 *, *::after, *::before {
   box-sizing: border-box;
 }
@@ -5,6 +8,7 @@
 body {
   background-color: aliceblue;
   margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 .test {
