--- a/src/components/settings/settings.scss
+++ b/src/components/settings/settings.scss
@@ -1,4 +1,4 @@
-.edit {
+.settings {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,7 +7,7 @@
   margin-top: 15%;
 }
 
-.edit__parts {
+.settings__parts {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -15,9 +15,9 @@
   max-width: 600px;
 }
 
-.edit__wrapper {
+.settings__wrapper {
   position: relative;
-  .edit__close {
+  .settings__close {
     position: absolute;
     top: -2px;
     right: -2px;
@@ -48,28 +48,28 @@
   }
 }
 
-.edit__wrapper--editing {
-  .edit__close {
+.settings__wrapper--editing {
+  .settings__close {
     transform: scale(1);
   }
 }
 
-.edit__button {
+.settings__button {
   margin-top: 20px;
 }
 
-.edit__wrapper--deleted {
+.settings__wrapper--deleted {
   transform: scale(0);
   transition: transform 0.1s linear;
 }
 
-.edit__new {
+.settings__new {
   width: 0;
   transform: scale(0);
   transition: transform 0.1s linear;
 }
 
-.edit__new--active {
+.settings__new--active {
   width: auto;
   transform: scale(1);
 }
