--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,9 +1,11 @@
+@import '../../index.scss';
+
 .button {
   padding: 20px 30px;
   background-color: #fff;
   border-radius: 5px;
-  border: 1px solid black;
-  background-color: #99c7fc;
+  border: 1px solid darken($blue, 10%);
+  background-color: $blue;
   text-align: center;
   vertical-align: middle;
   font-size: 20px;
