feat: add the ability to edit sections

--- a/src/components/settings/settings.scss
+++ b/src/components/settings/settings.scss
@@ -19,6 +19,16 @@
   position: relative;
 }
 
+.settings__ref--disabled .ref__children {
+  background-color: lightgray;
+  color: #000;
+
+  &:hover {
+    color: black;
+    cursor: auto;
+  }
+}
+
 .settings__close {
   transform: scale(0);
 }
