--- a/src/components/ref/ref.scss
+++ b/src/components/ref/ref.scss
@@ -11,8 +11,8 @@
 }
 
 .ref__children {
-  width: 60px;
-  padding: 15px 0;
+  min-width: 69px;
+  padding: 15px 20px;
   border: 1px solid black;
   border-radius: 10px;
   text-align: center;
