--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+.App__loading {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
