--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,20 +1,20 @@
 @import '../../index.scss';
 
-.create-form {
+.form {
   padding: 0 20px;
 }
 
-.create-form__heading {
+.form__heading {
   text-align: center;
 }
 
-.create-form__heading--name {
+.form__heading--name {
   margin-bottom: 5px;
   font-size: 14px;
   color: darken(gray, 10%);
 }
 
-.create-form__head-wrapper {
+.form__head-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,13 +25,13 @@
   margin-bottom: 20px;
 }
 
-.create-form__wrapper {
+.form__wrapper {
   display: flex;
   flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
-  .create-form__wrapper {
+  .form__wrapper {
     flex-direction: row;
     justify-content: start;
     align-items: center;
@@ -42,7 +42,7 @@
   }
 }
 
-.create-form__words-wrapper {
+.form__words-wrapper {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -50,19 +50,19 @@
   padding: 10px 0;
   border-top: 1px solid lighten($blue, 10%);
 
-  &:hover .create-form__close {
+  &:hover .form__close {
     transform: scale(1);
   }
 }
 
-.create-form__close {
+.form__close {
   top: 40%;
   right: 20px;
   transform: scale(0);
 }
 
 @media screen and (min-width: 768px) {
-  .create-form__close {
+  .form__close {
     top: -10px;
     right: -10px;
     transform: scale(0);
@@ -70,7 +70,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .create-form__words-wrapper {
+  .form__words-wrapper {
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 15px;
@@ -81,7 +81,7 @@
   }
 }
 
-.create-form__label {
+.form__label {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,7 +92,7 @@
   color: gray;
 }
 
-.create-form__label--name {
+.form__label--name {
   align-items: flex-start;
   width: auto;
   margin: 0;
@@ -104,7 +104,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .create-form__label--name {
+  .form__label--name {
     font-size: 18px;
     input {
       max-width: 300px;
@@ -112,15 +112,15 @@
   }
 }
 
-.create-form__button {
+.form__button {
   padding: 5px 15px;
 }
 
-.create-form__button--send {
+.form__button--send {
   height: 50px;
 }
 
-.create-form__button-wrapper {
+.form__button-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -132,7 +132,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .create-form__button-wrapper {
+  .form__button-wrapper {
     height: 115px;
     margin-left: 15px;
     margin-right: 0px;
@@ -141,7 +141,7 @@
 
 
 @media screen and (min-width: 768px) {
-  .create-form__words-wrapper {
+  .form__words-wrapper {
     border-top: none;
   }
 }
