feat: create logout component

--- a/src/components/sign-in/sign-in.scss
+++ b/src/components/sign-in/sign-in.scss
@@ -18,6 +18,10 @@
   height: 30px;
 }
 
+.sign-in__input--error {
+  border: 2px solid red;
+}
+
 .sign-in__button {
   display: block;
   width: 100%;
