--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,5 +21,26 @@
 
   &:first-child {
     margin-right: 40px;
+  }
+}
+
+.header__logout {
+  position: absolute;
+  top: 11px;
+  right: 10px;
+  width: 50px;
+  font-size: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .header__logout {
+    width: 100px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header__logout {
+    right: 20px;
   }
 }
