--- a/src/components/parts/parts.scss
+++ b/src/components/parts/parts.scss
@@ -1,10 +1,13 @@
+@import '../../index.scss';
+
 .parts {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 100%;
-  padding: 0 10px;
-  margin-top: 10%;
+  width: 100vw;
+  height: 90vh;
+  padding: 0 20px;
 
   h1 {
     margin-bottom: 50px;
@@ -30,4 +33,18 @@
   display: block;
   text-align: center;
   max-width: 600px;
+}
+
+.parts__void {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+  color: gray;
+}
+
+.parts__link {
+  margin-top: 5px;
+  text-decoration: none;
+  color: darken($blue, 20%);
 }
