--- a/src/index.scss
+++ b/src/index.scss
@@ -15,5 +15,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
 }
