--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ $blue: #99c7fc;
 }
 
 body {
-  background-color: aliceblue;
+  background-color: darken(aliceblue, 3%);
   margin: 0;
   font-family: 'Poppins', sans-serif;
 }
