--- a/src/components/ref/ref.scss
+++ b/src/components/ref/ref.scss
@@ -1,6 +1,8 @@
+@import '../../index.scss';
+
 .ref {
   display: inline-block;
-  color: black;
+  color: white;
   text-decoration: none;
   transition: color 0.1s linear;
   margin: 5px;
@@ -13,7 +15,8 @@
 .ref__children {
   min-width: 69px;
   padding: 15px 20px;
-  border: 1px solid black;
+  background-color: darken($body, 15%);
+  border: 1px solid darken($blue, 20%);
   border-radius: 10px;
   text-align: center;
   font-size: 30px;
