feat: add a word-speaker

--- a/src/components/settings/settings.scss
+++ b/src/components/settings/settings.scss
@@ -36,6 +36,7 @@
 
 .settings__ref--disabled .ref__children {
   background-color: lightgray;
+  border: 1px solid gray;
   color: #000;
 
   &:hover {
