--- a/src/components/words-list/words-list.scss
+++ b/src/components/words-list/words-list.scss
@@ -33,6 +33,10 @@
   border: 1px solid $blue;
   box-shadow: 0 0 6px 4px lighten(lightblue, 10%);
   background-color: darken($body, 2%);
+
+  &:hover .words-list__sound {
+    opacity: 1;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -49,6 +53,8 @@
 
 .words-list__word {
   position: relative;
+  display: flex;
+  justify-content: space-between;
   font-weight: bold;
 
   &::after {
@@ -84,3 +90,24 @@
   }
 }
 
+.words-list__sound {
+  position: absolute;
+  top: 4.5px;
+  right: 4.5px;
+  opacity: 0;
+  width: 36px;
+  height: 36px;
+  background-color: lighten($blue, 3%);
+  border-radius: 10px;
+  border: none;
+  z-index: 2;
+  transition: opacity 0.1s linear;
+  cursor: pointer;
+
+  svg {
+    position: absolute;
+    top: 7.5px;
+    left: 7px;
+    width: 20px;
+  }
+}
