--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -12,7 +12,7 @@
   position: absolute;
   width: 18px;
   height: 18px;
-  background: $blue;
+  background: $main;
   border-radius: 50%;
   animation: loading 1.2s linear infinite;
 }
