--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: lightgray;
+    background-color: $body;
     opacity: 0.3;
     content: '';
   }
@@ -26,8 +26,9 @@
   margin: 0 10px;
   padding: 50px;
   border-radius: 20px;
-  background-color: $body;
+  background-color: darken($body, 5%);
   box-shadow: 0 0 7px 3px lightgray;
+  border: 1px solid $main;
 }
 
 @media screen and (min-width: 375px) {
