--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -42,16 +42,34 @@
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .form__wrapper {
+    min-width: 930px;
+  }
+}
+
 .form__words-wrapper {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px 0;
-  border-top: 1px solid lighten($blue, 10%);
+  border-top: 1px solid lighten($main, 10%);
 
   &:hover .form__close {
     transform: scale(1);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .form__words-wrapper {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    padding: 5px 10px 0px 10px;
+    border: 1px solid $main;
+    border-radius: 10px;
+    background-color: darken($body, 10%);
   }
 }
 
@@ -66,18 +84,6 @@
     top: -10px;
     right: -10px;
     transform: scale(0);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .form__words-wrapper {
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    padding: 5px 10px 0px 10px;
-    border: 1px solid $blue;
-    border-radius: 10px;
-    background-color: lighten($blue, 10%);
   }
 }
 
@@ -136,12 +142,5 @@
     height: 115px;
     margin-left: 15px;
     margin-right: 0px;
-  }
-}
-
-
-@media screen and (min-width: 768px) {
-  .form__words-wrapper {
-    border-top: none;
   }
 }
