--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,7 +6,7 @@
   align-items: center;
   width: 100%;
   height: 60px;
-  background-color: $blue;
+  background-color: $main;
   box-shadow: -2px -2px 7px 7px lightgray;
 }
 
@@ -17,7 +17,7 @@
   transition: 0.1s linear color;
 
   &:hover {
-    color: darken($blue, 50%);
+    color: darken($main, 50%);
   }
 
   &:first-child {
