--- a/src/components/parts/parts.scss
+++ b/src/components/parts/parts.scss
@@ -20,7 +20,7 @@
 
   h1 {
     margin-bottom: 50px;
-    color: darken($blue, 50%);
+    color: darken($main, 50%);
   }
 }
 
@@ -62,5 +62,5 @@
 .parts__link {
   margin-top: 5px;
   text-decoration: none;
-  color: darken($blue, 20%);
+  color: darken($main, 20%);
 }
