--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -28,7 +28,7 @@
   width: 90vw;
   max-width: 600px;
   transform: translate(-50%, -50%);
-  background-color: $body;
+  background-color: white;
   border-radius: 10px;
   font-size: 20px;
 }
@@ -39,7 +39,7 @@
   height: 50px;
   margin-top: auto;
   padding: 0 20px;
-  background-color: $blue;
+  background-color: $main;
   vertical-align: bottom;
   border-radius: 10px 10px 0 0;
   color: white;
@@ -62,13 +62,13 @@
   margin-left: 10px;
   padding: 5px 10px;
   background-color: $body;
-  border: 1px solid $blue;
+  border: 1px solid $main;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
 
   &:hover {
-    background-color: $blue;
+    background-color: $main;
     color: white;
   }
 }
