--- a/src/components/test/test.scss
+++ b/src/components/test/test.scss
@@ -31,6 +31,13 @@
   }
 }
 
+.test__switcher {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .test__button {
   background-color: $main;
   border: 1px solid $main;
