--- a/src/components/word/word.scss
+++ b/src/components/word/word.scss
@@ -1,3 +1,5 @@
+@import '../../index.scss';
+
 .word {
   display: flex;
   flex-direction: column;
@@ -12,6 +14,20 @@
   width: 90%;
   margin-bottom: 20px;
   margin-top: -15px;
+}
+
+.word__sound {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 20px;
+  padding: 5px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
+  &:hover svg {
+    fill: $main;
+  }
 }
 
 .word__invisible {
