--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -25,6 +25,12 @@
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 1024px) {
+  .form__head-wrapper {
+    max-width: 900px;
+  }
+}
+
 .form__wrapper {
   display: flex;
   flex-direction: column;
