--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -1,6 +1,13 @@
 @import '../../index.scss';
 
 .loading {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  max-height: 100%;
+}
+
+.loading__wrapper {
   display: inline-block;
   margin: auto;
   position: relative;
@@ -8,7 +15,7 @@
   height: 240px;
 }
 
-.loading div {
+.loading__wrapper div {
   position: absolute;
   width: 18px;
   height: 18px;
@@ -17,73 +24,73 @@
   animation: loading 1.2s linear infinite;
 }
 
-.loading div:nth-child(1) {
+.loading__wrapper div:nth-child(1) {
   animation-delay: 0s;
   top: 37px * 3;
   left: 66px * 3;
 }
 
-.loading div:nth-child(2) {
+.loading__wrapper div:nth-child(2) {
   animation-delay: -0.1s;
   top: 22px * 3;
   left: 62px * 3;
 }
 
-.loading div:nth-child(3) {
+.loading__wrapper div:nth-child(3) {
   animation-delay: -0.2s;
   top: 11px * 3;
   left: 52px * 3;
 }
 
-.loading div:nth-child(4) {
+.loading__wrapper div:nth-child(4) {
   animation-delay: -0.3s;
   top: 7px * 3;
   left: 37px * 3;
 }
 
-.loading div:nth-child(5) {
+.loading__wrapper div:nth-child(5) {
   animation-delay: -0.4s;
   top: 11px * 3;
   left: 22px * 3;
 }
 
-.loading div:nth-child(6) {
+.loading__wrapper div:nth-child(6) {
   animation-delay: -0.5s;
   top: 22px * 3;
   left: 11px * 3;
 }
 
-.loading div:nth-child(7) {
+.loading__wrapper div:nth-child(7) {
   animation-delay: -0.6s;
   top: 37px * 3;
   left: 7px * 3;
 }
 
-.loading div:nth-child(8) {
+.loading__wrapper div:nth-child(8) {
   animation-delay: -0.7s;
   top: 52px * 3;
   left: 11px * 3;
 }
 
-.loading div:nth-child(9) {
+.loading__wrapper div:nth-child(9) {
   animation-delay: -0.8s;
   top: 62px * 3;
   left: 22px * 3;
 }
 
-.loading div:nth-child(10) {
+.loading__wrapper div:nth-child(10) {
   animation-delay: -0.9s;
   top: 66px * 3;
   left: 37px * 3;
 }
 
-.loading div:nth-child(11) {
+.loading__wrapper div:nth-child(11) {
   animation-delay: -1s;
   top: 62px * 3;
   left: 52px * 3;
 }
 
-.loading div:nth-child(12) {
+.loading__wrapper div:nth-child(12) {
   animation-delay: -1.1s;
   top: 52px * 3;
   left: 62px * 3;
