--- a/src/components/logout/logout.scss
+++ b/src/components/logout/logout.scss
@@ -6,17 +6,17 @@
   align-items: center;
   width: 100px;
   background-color: transparent;
-  border: 2px solid white;
+  border: 2px solid $main;
   border-radius: 8px;
-  color: white;
+  color: $main;
   cursor: pointer;
 
   &:hover {
-    background-color: white;
-    color: darken($main, 20%);
+    background-color: $main;
+    color: $body;
 
     svg {
-      fill: $main;
+      fill: $body;
     }
   }
 }
@@ -24,5 +24,5 @@
 .logout svg {
   width: 200px;
   height: 32px;
-  fill: white;
+  fill: $main;
 }
