--- a/src/components/words-list/words-list.scss
+++ b/src/components/words-list/words-list.scss
@@ -26,77 +26,7 @@
   }
 }
 
-.words-list__wrapper {
-  width: 300px;
-  border-radius: 10px;
-  border: 1px solid $main;
+.words-list__card {
   margin-bottom: 15px;
   margin-left: 15px;
-  box-shadow: 0 0 6px 4px lightgray;
-  background-color: darken($body, 2%);
-
-  &:hover .words-list__sound {
-    opacity: 1;
-  }
-}
-
-.words-list__word {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-
-  &::after {
-    position: absolute;
-    bottom: 3px;
-    right: 8px;
-    color: gray;
-    font-size: 8px;
-    font-weight: normal;
-    content: 'Англ.';
-  }
-}
-
-.words-list__translate,
-.words-list__word {
-  padding: 10px;
-}
-
-.words-list__translate {
-  position: relative;
-  margin: 0;
-  border-top: 1px solid $main;
-  font-weight: normal;
-
-  &::after {
-    position: absolute;
-    bottom: 3px;
-    right: 8px;
-    color: gray;
-    font-size: 8px;
-    font-weight: normal;
-    content: 'Перевод';
-  }
-}
-
-.words-list__sound {
-  position: absolute;
-  top: 4.5px;
-  right: 4.5px;
-  opacity: 0;
-  width: 36px;
-  height: 36px;
-  background-color: lighten($main, 3%);
-  border-radius: 10px;
-  border: none;
-  z-index: 2;
-  transition: opacity 0.1s linear;
-  cursor: pointer;
-
-  svg {
-    position: absolute;
-    top: 7.5px;
-    left: 7px;
-    width: 20px;
-  }
 }
