--- a/src/components/parts/parts.scss
+++ b/src/components/parts/parts.scss
@@ -19,7 +19,8 @@
   margin-bottom: 20px;
 
   h1 {
-    margin-bottom: 50px;
+    text-align: center;
+    margin-bottom: 20px;
     color: darken($main, 50%);
   }
 }
@@ -31,6 +32,7 @@
 }
 
 .parts__general {
+  display: flex;
   width: 100%;
   max-width: 600px;
   margin-bottom: 50px;
