--- a/src/components/parts/parts.scss
+++ b/src/components/parts/parts.scss
@@ -33,6 +33,7 @@
 
 .parts__general {
   display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 600px;
   margin-bottom: 50px;
@@ -40,10 +41,20 @@
   .ref {
     width: 100%;
     margin-right: auto;
+
+    &:first-child {
+      margin-right: 10px;
+    }
   }
 
   .ref__children {
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .parts__general {
+    flex-direction: row;
   }
 }
 
