fix: some fixes in search, test, panel, word and audio.js

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -35,6 +35,10 @@
   &::placeholder {
     color: white;
   }
+
+  &:focus {
+    border-radius:5px 5px 0 0;
+  }
 }
 
 .search__list {
@@ -60,6 +64,10 @@
   &::-webkit-scrollbar {
     width: 0;
   }
+}
+
+.search__input:focus + .search__list {
+  display: block;
 }
 
 .search__card {
