--- a/src/components/parts/parts.scss
+++ b/src/components/parts/parts.scss
@@ -52,6 +52,10 @@
   }
 }
 
+.parts__ref {
+  margin: 0 0 10px 0;
+}
+
 @media screen and (min-width: 768px) {
   .parts__general {
     flex-direction: row;
