--- a/src/components/test/test.scss
+++ b/src/components/test/test.scss
@@ -6,7 +6,8 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: calc(100vh - 60px);
+  height: 100%;
+  min-height: calc(100vh - 60px);
   margin: auto;
 }
 
@@ -18,6 +19,8 @@
   width: 90vw;
   min-height: 420px;
   max-height: 500px;
+  margin-top: auto;
+  margin-bottom: auto;
   background-color: $body;
   border: 3px solid $main;
   background-repeat: repeat;
