--- a/src/components/words-list/words-list.scss
+++ b/src/components/words-list/words-list.scss
@@ -4,6 +4,12 @@
   height: 100%;
 }
 
+.words-list__play {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .words-list__container {
   display: flex;
   flex-direction: column;
