--- a/src/components/words-list/words-list.scss
+++ b/src/components/words-list/words-list.scss
@@ -35,8 +35,17 @@
 .words-list__card {
   margin-bottom: 15px;
   margin-left: 15px;
-}
+  cursor: pointer;
 
-.words-list__card--current {
-  box-shadow: 0px 0px 3px 3px $main;
+  &--current {
+    box-shadow: 0px 0px 3px 3px $main;
+  }
+
+  &--hidden {
+    opacity: 0.2;
+  }
+
+  &--disabled {
+    cursor: auto;
+  }
 }
