--- a/src/components/parts/parts.scss
+++ b/src/components/parts/parts.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   min-height: 85vh;
   height: 100%;
   padding: 0 20px;
