--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -42,7 +42,7 @@
     opacity: 0;
     background-color: transparent;
     transition: opacity 0.2s linear;
-    content: ''
+    content: '';
   }
 }
 
