--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
 $body: rgb(255, 243, 232);
-$main:  lighten(brown, 20%);
+$main: lighten(brown, 20%);
 $card: #f7f7f1;
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
