--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -4,9 +4,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
 
   &::before {
     position: absolute;
