--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../index.css';
 
 .auth {
   display: flex;
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: $body;
+    background-color: var(--body);
     opacity: 0.3;
     content: '';
   }
@@ -26,9 +26,9 @@
   margin: 0 10px;
   padding: 50px;
   border-radius: 20px;
-  background-color: darken($body, 5%);
-  box-shadow: 0 0 7px 3px lightgray;
-  border: 1px solid $main;
+  background-color: var(--bgc-tertiary);
+  box-shadow: 0 0 7px 3px var(--color-secondary-3);
+  border: 1px solid var(--main);
 }
 
 @media screen and (min-width: 375px) {
