--- a/src/components/close-button/close-button.scss
+++ b/src/components/close-button/close-button.scss
@@ -18,7 +18,7 @@
     width: 12px;
     height: 2px;
     transform: rotate(45deg);
-    background-color: #fff;
+    background-color: var(--color-primary);
     content: '';
   }
 
