--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../index.css';
 
 .header {
   display: flex;
@@ -6,8 +6,8 @@
   align-items: center;
   width: 100%;
   height: 60px;
-  background-color: $main;
-  box-shadow: -2px -2px 7px 7px lightgray;
+  background-color: var(--main);
+  box-shadow: -2px -2px 7px 7px var(--color-secondary-3);
 }
 
 .header__burger {
@@ -25,7 +25,7 @@
   span {
     width: 30px;
     height: 2px;
-    background-color: $body;
+    background-color: var(--body);
     margin-top: 10px;
 
     &:first-child {
@@ -49,7 +49,7 @@
 .header__burger--active::before {
   width: 100vw;
   height: 100%;
-  background-color: #000;
+  background-color: var(--color-secondary);
   opacity: 0.2;
 }
 
@@ -69,11 +69,11 @@
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  transform: translateX(-15%);
+  transform: translateX(-25%);
   max-height: 200vh;
-  background-color: $body;
+  background-color: var(--bgc-secondary);
   transition: left 0.2s linear;
-  box-shadow: 0 0 10px 10px rgba(150, 150, 150, 0.363);
+  box-shadow: 0 0 10px 10px var(--color-secondary-3);
   z-index: 9;
 
   &--open {
@@ -97,7 +97,7 @@
 
 .header__heading {
   margin-left: 20px;
-  color: darken($main, 20%);
+  color: var(--text-secondary);
 }
 
 @media screen and (min-width: 1024px) {
@@ -122,24 +122,24 @@
   width: 100%;
   padding: 20px;
   font-size: 18px;
-  color: $main;
+  color: var(--main);
   text-decoration: none;
   transition: 0.1s linear color;
 
   &:hover {
-    color: $body;
-    background-color: $main;
+    color: var(--body);
+    background-color: var(--main);
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header__link {
     padding: 16.7px;
-    color: $body;
+    color: var(--color-primary);
     transition: box-shadow 0.1s linear;
 
     &:hover {
-      box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: inset 0 0 10px 10px var(--color-secondary-3);
     }
   }
 }
@@ -167,12 +167,12 @@
     font-size: 18px;
     border-radius: 0;
     border: none;
-    color: $body;
+    color: var(--color-primary);
     transition: box-shadow 0.1s linear;
-    background-color: $main;
+    background-color: var(--main);
 
     &:hover {
-      box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: inset 0 0 10px 10px var(--color-secondary-3);
     }
 
     svg {
