--- a/src/components/parts/parts.scss
+++ b/src/components/parts/parts.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../index.css';
 
 .parts-loading {
   display: flex;
@@ -21,7 +21,7 @@
   h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: darken($main, 50%);
+    color: var(--text-primary);
   }
 }
 
@@ -73,11 +73,11 @@
   flex-direction: column;
   align-items: center;
   font-size: 18px;
-  color: gray;
+  color: var(--color-secondary-2);
 }
 
 .parts__link {
   margin-top: 5px;
   text-decoration: none;
-  color: darken($main, 20%);
+  color: var(--text-primary);
 }
