--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../index.css';
 
 .popup {
   position: fixed;
@@ -14,7 +14,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: var(--crolor-secondary);
     opacity: 0.3;
     z-index: -1;
     content: '';
@@ -28,7 +28,7 @@
   width: 90vw;
   max-width: 600px;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: var(--color-primary);
   border-radius: 10px;
   font-size: 20px;
 }
@@ -39,10 +39,10 @@
   height: 50px;
   margin-top: auto;
   padding: 0 20px;
-  background-color: $main;
+  background-color: var(--main);
   vertical-align: bottom;
   border-radius: 10px 10px 0 0;
-  color: white;
+  color: var(--color-primary);
 }
 
 .popup__text {
@@ -61,14 +61,14 @@
 .popup__cancel {
   margin-left: 10px;
   padding: 5px 10px;
-  background-color: $body;
-  border: 1px solid $main;
+  background-color: var(--body);
+  border: 1px solid var(--main);
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
 
   &:hover {
-    background-color: $main;
-    color: white;
+    background-color: var(--main);
+    color: var(--color-primary);
   }
 }
