--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../index.css';
 
 .search {
   width: 250px;
@@ -24,16 +24,16 @@
 .search__input {
   height: 30px;
   max-width: 350px !important;
-  caret-color: white;
-  color: white;
-  background-color: lighten($main, 10%);
+  caret-color: var(--color-primary);
+  color: var(--color-primary);
+  background-color: var(--bgc-primary);
 
   &::-webkit-search-cancel-button {
     -webkit-appearance: none;
   }
 
   &::placeholder {
-    color: white;
+    color: var(--color-primary);
   }
 
   &:focus {
@@ -53,7 +53,7 @@
   background-color: rgba(255, 221, 227, 0.7);
   padding: 15px 0;
   z-index: 9;
-  border: 1px solid $main;
+  border: 1px solid var(--main);
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
 
@@ -73,13 +73,13 @@
 .search__card {
   width: 100%;
   box-shadow: none;
-  background-color: white;
+  background-color: var(--color-primary);
   transform: scale(0.9);
   background-color: rgb(255, 236, 236);
 }
 
 .search__empty {
   text-align: center;
-  color: darken($main, 20%);
+  color: var(--main);
   margin: 0;
 }
