--- a/src/components/settings/settings.scss
+++ b/src/components/settings/settings.scss
@@ -35,12 +35,12 @@
 }
 
 .settings__ref--disabled .ref__children {
-  background-color: lightgray;
-  border: 1px solid gray;
-  color: #000;
+  background-color: var(--color-secondary-3);
+  border: 1px solid var(--color-secondary-2);
+  color: var(--text-primary);
 
   &:hover {
-    color: black;
+    color: var(--text-primary);
     cursor: auto;
   }
 }
