--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../index.css';
 
 .sign-up__heading {
   text-align: center;
@@ -10,7 +10,7 @@
   flex-direction: column;
   margin-bottom: 8px;
   font-size: 10px;
-  color: gray;
+  color: var(--color-secondary-2);
 }
 
 .sign-up__input {
