--- a/src/components/switcher/switcher.scss
+++ b/src/components/switcher/switcher.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../index.css';
 
 .switcher {
   display: flex;
@@ -20,11 +20,11 @@
   }
 
   .switcher--primary & svg {
-    fill: $main;
+    fill: var(--main);
   }
 
   .switcher--secondary & svg {
-    fill: #fff;
+    fill: var(--color-primary);
   }
 }
 
@@ -53,17 +53,16 @@
   }
 
   .switcher--primary & {
-    border: 1px solid $main;
+    border: 1px solid var(--main);
     &::after {
-      background-color: $main;
+      background-color: var(--main);
     }
   }
 
   .switcher--secondary & {
-    border: 1px solid #fff;
+    border: 1px solid var(--color-primary);
     &::after {
-      background-color: #fff;
+      background-color: var(--color-primary);
     }
   }
-  
 }
