--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -14,7 +14,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: var(--crolor-secondary);
+    background-color: var(--color-secondary);
     opacity: 0.3;
     z-index: -1;
     content: '';
