--- a/src/components/small-card/small-card.scss
+++ b/src/components/small-card/small-card.scss
@@ -4,9 +4,10 @@
   width: 300px;
   border-radius: 10px;
   border: 1px solid var(--main);
+  color: var(--text-primary);
 
   box-shadow: 0 0 6px 4px var(--color-secondary-3);
-  background-color: var(--body);
+  background-color: var(--card);
 
   &:hover .small-card__sound {
     opacity: 1;
@@ -71,6 +72,7 @@
     top: 7.5px;
     left: 7px;
     width: 20px;
+    fill: var(--color-secondary);
   }
 
   &--disabled {
