--- a/src/components/test/test.scss
+++ b/src/components/test/test.scss
@@ -21,8 +21,9 @@
   max-height: 500px;
   margin-top: auto;
   margin-bottom: auto;
-  background-color: var(--body);
+  background-color: var(--card);
   border: 3px solid var(--main);
+  color: var(--text-primary);
   background-repeat: repeat;
   border-radius: 20px;
   box-shadow: 0 0 15px 5px var(--color-secondary-2);
