--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -18,7 +18,7 @@
   }
 }
 
-.button__small {
+.button--small {
   width: auto;
   margin-left: auto;
   margin-right: auto;
@@ -35,9 +35,9 @@
   }
 }
 
-.button__reverse {
+.button--reverse {
   background-color: var(--color-primary);
-  color: var(--text-secondary);
+  color: var(--main);
 
   &:hover {
     background-color: var(--main);
