feat: добавлен контекст темы на всё приложение

--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -44,6 +44,13 @@
   }
 }
 
+.auth__theme-switcher {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .auth__heading {
   font-size: 26px;
   margin: 0;
