fix: названия переменных

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -11,7 +11,7 @@
 .form__heading--name {
   margin-bottom: 5px;
   font-size: 14px;
-  color: var(--color-secondary-2);
+  color: var(--color-secondary-100);
 }
 
 .form__head-wrapper {
@@ -84,7 +84,7 @@
     padding: 5px 10px 0px 10px;
     border: 1px solid var(--main);
     border-radius: 10px;
-    background-color: var(--card);
+    background-color: var(--card-primary);
   }
 }
 
