--- a/src/components/test/test.scss
+++ b/src/components/test/test.scss
@@ -21,12 +21,12 @@
   max-height: 500px;
   margin-top: auto;
   margin-bottom: auto;
-  background-color: var(--card);
+  background-color: var(--card-primary);
   border: 3px solid var(--main);
   color: var(--text-primary);
   background-repeat: repeat;
   border-radius: 20px;
-  box-shadow: 0 0 15px 5px var(--color-secondary-2);
+  box-shadow: 0 0 15px 5px var(--color-secondary-100);
 }
 
 @media screen and (min-width: 425px) {
