--- a/src/components/sign-in/sign-in.scss
+++ b/src/components/sign-in/sign-in.scss
@@ -2,6 +2,7 @@
 
 .sign-in__heading {
   text-align: center;
+  color: var(--text-primary);
   margin-top: 0;
 }
 
@@ -10,7 +11,7 @@
   flex-direction: column;
   margin-bottom: 8px;
   font-size: 10px;
-  color: gray;
+  color: var(--color-secondary-100);
 }
 
 .sign-in__input {
@@ -44,4 +45,5 @@
   display: block;
   margin-top: 15px;
   background-color: inherit;
+  color: var(--text-secondary);
 }
