--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -11,11 +11,13 @@
 .form__heading--name {
   margin-bottom: 5px;
   font-size: 14px;
-  color: darken(gray, 10%);
+  color: var(--color-secondary-100);
 }
 
 .form__head-wrapper {
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   justify-content: space-between;
   align-items: center;
   max-width: 660px;
@@ -23,6 +25,13 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .form__head-wrapper {
+    flex-direction: row;
+    gap: 0;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -60,7 +69,7 @@
   flex-direction: column;
   align-items: center;
   padding: 10px 0;
-  border-top: 1px solid lighten($main, 10%);
+  border-top: 1px solid var(--main);
 
   &:hover .form__close {
     transform: scale(1);
@@ -73,9 +82,9 @@
     margin-right: 15px;
     margin-bottom: 15px;
     padding: 5px 10px 0px 10px;
-    border: 1px solid $main;
+    border: 1px solid var(--main);
     border-radius: 10px;
-    background-color: darken($body, 10%);
+    background-color: var(--card-primary);
   }
 }
 
@@ -101,7 +110,7 @@
   margin-bottom: 10px;
   text-align: center;
   font-size: 13px;
-  color: gray;
+  color: var(--text-tertiary);
 }
 
 .form__label--name {
