--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,8 +6,8 @@
   align-items: center;
   width: 100%;
   height: 60px;
-  background-color: $main;
-  box-shadow: -2px -2px 7px 7px lightgray;
+  background-color: var(--main);
+  box-shadow: -2px -2px 7px 7px var(--color-secondary-200);
 }
 
 .header__burger {
@@ -25,7 +25,7 @@
   span {
     width: 30px;
     height: 2px;
-    background-color: $body;
+    background-color: var(--body);
     margin-top: 10px;
 
     &:first-child {
@@ -49,7 +49,7 @@
 .header__burger--active::before {
   width: 100vw;
   height: 100%;
-  background-color: #000;
+  background-color: var(--color-secondary);
   opacity: 0.2;
 }
 
@@ -67,15 +67,19 @@
   flex-direction: column;
   width: 300px;
   height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  transform: translateX(-25%);
   max-height: 200vh;
-  background-color: $body;
+  background-color: var(--bgc-secondary);
   transition: left 0.2s linear;
-  box-shadow: 0 0 10px 10px rgba(150, 150, 150, 0.363);
+  box-shadow: 0 0 10px 10px var(--color-secondary-200);
   z-index: 9;
 
   &--open {
     position: fixed;
     left: 0;
+    transform: translateX(0);
   }
 }
 
@@ -93,7 +97,7 @@
 
 .header__heading {
   margin-left: 20px;
-  color: darken($main, 20%);
+  color: var(--text-secondary);
 }
 
 @media screen and (min-width: 1024px) {
@@ -103,15 +107,13 @@
 }
 
 .header__search {
-  position: absolute;
-  top: 15px;
-  right: 15px;
+  position: relative;
   max-width: 250px;
+  margin: 0 15px;
 }
 
 @media screen and (min-width: 1024px) {
   .header__search {
-    left: 15px;
     max-width: 300px;
   }
 }
@@ -120,24 +122,39 @@
   width: 100%;
   padding: 20px;
   font-size: 18px;
-  color: $main;
+  color: var(--main);
   text-decoration: none;
   transition: 0.1s linear color;
 
   &:hover {
-    color: $body;
-    background-color: $main;
+    color: var(--body);
+    background-color: var(--main);
+  }
+
+  body[data-theme="dark"] & {
+    &:hover {
+      color: var(--text-secondary);
+      background-color: var(--main);
+    }
   }
 }
 
 @media screen and (min-width: 1024px) {
   .header__link {
     padding: 16.7px;
-    color: $body;
+    color: var(--color-primary);
     transition: box-shadow 0.1s linear;
 
     &:hover {
-      box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.1);
+      color: var(--color-primary);
+      box-shadow: inset 0 0 10px 10px var(--box-shadow-nav);
+    }
+
+    body[data-theme="dark"] & {
+      &:hover {
+        color: var(--color-primary);
+        box-shadow: inset 0 0 5px 5px var(--box-shadow-nav);
+      }
     }
   }
 }
@@ -149,6 +166,15 @@
   width: 50px;
   font-size: 0;
   z-index: -1;
+
+  body[data-theme="dark"] & {
+    &:hover {
+      color: var(--color-primary);
+      path {
+        fill: var(--color-primary);
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -165,16 +191,45 @@
     font-size: 18px;
     border-radius: 0;
     border: none;
-    color: $body;
+    color: var(--color-primary);
     transition: box-shadow 0.1s linear;
-    background-color: $main;
+    background-color: var(--main);
 
     &:hover {
-      box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.1);
+      color: var(--color-primary);
+      box-shadow: inset 0 0 10px 10px var(--box-shadow-nav);
+    }
+
+    body[data-theme="dark"] & {
+      &:hover {
+        box-shadow: inset 0 0 5px 5px var(--box-shadow-nav);
+      }
     }
 
     svg {
       display: none;
     }
+  }
+}
+
+.header__switcher-desktop {
+  display: none;
+  margin-left: 0;
+  margin-right: 15px;
+}
+
+.header__switcher-mobile {
+  position: absolute;
+  bottom: 22px;
+  right: 30px;
+}
+
+@media screen and (min-width: 1024px) {
+  .header__switcher-desktop {
+    display: flex;
+  }
+
+  .header__switcher-mobile {
+    display: none;
   }
 }
