--- a/src/components/logout/logout.scss
+++ b/src/components/logout/logout.scss
@@ -6,17 +6,17 @@
   align-items: center;
   width: 100px;
   background-color: transparent;
-  border: 2px solid $main;
+  border: 2px solid var(--main);
   border-radius: 8px;
-  color: $main;
+  color: var(--main);
   cursor: pointer;
 
   &:hover {
-    background-color: $main;
-    color: $body;
+    background-color: var(--main);
+    color: var(--body);
 
     svg {
-      fill: $body;
+      fill: var(--body);
     }
   }
 }
@@ -24,5 +24,5 @@
 .logout svg {
   width: 200px;
   height: 32px;
-  fill: $main;
+  fill: var(--main);
 }
