--- a/src/components/reset/reset.scss
+++ b/src/components/reset/reset.scss
@@ -10,14 +10,14 @@
 .reset__text {
   text-align: center;
   font-size: 12px;
-  color: gray;
+  color: var(--color-secondary-100);
 }
 
 .reset__label {
   display: flex;
   flex-direction: column;
   font-size: 10px;
-  color: gray;
+  color: var(--color-secondary-100);
 }
 
 .reset__input {
