--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   margin-bottom: 8px;
   font-size: 10px;
-  color: gray;
+  color: var(--color-secondary-100);
 }
 
 .sign-up__input {
