--- a/src/components/small-card/small-card.scss
+++ b/src/components/small-card/small-card.scss
@@ -3,10 +3,11 @@
 .small-card {
   width: 300px;
   border-radius: 10px;
-  border: 1px solid $main;
+  border: 1px solid var(--main);
+  color: var(--text-primary);
 
-  box-shadow: 0 0 6px 4px lightgray;
-  background-color: darken($body, 2%);
+  box-shadow: 0 0 6px 4px var(--color-secondary-200);
+  background-color: var(--card-primary);
 
   &:hover .small-card__sound {
     opacity: 1;
@@ -23,7 +24,7 @@
     position: absolute;
     bottom: 3px;
     right: 8px;
-    color: gray;
+    color: var(--color-secondary-100);
     font-size: 8px;
     font-weight: normal;
     content: 'Англ.';
@@ -38,14 +39,14 @@
 .small-card__translate {
   position: relative;
   margin: 0;
-  border-top: 1px solid $main;
+  border-top: 1px solid var(--main);
   font-weight: normal;
 
   &::after {
     position: absolute;
     bottom: 3px;
     right: 8px;
-    color: gray;
+    color: var(--color-secondary-100);
     font-size: 8px;
     font-weight: normal;
     content: 'Перевод';
@@ -59,7 +60,7 @@
   opacity: 0;
   width: 36px;
   height: 36px;
-  background-color: lighten($main, 3%);
+  background-color: var(--main);
   border-radius: 10px;
   border: none;
   z-index: 2;
@@ -71,6 +72,7 @@
     top: 7.5px;
     left: 7px;
     width: 20px;
+    fill: var(--color-secondary);
   }
 
   &--disabled {
