--- a/src/components/words-list/words-list.scss
+++ b/src/components/words-list/words-list.scss
@@ -38,7 +38,7 @@
   cursor: pointer;
 
   &--current {
-    box-shadow: 0px 0px 3px 3px $main;
+    box-shadow: 0px 0px 3px 3px var(--main);
   }
 
   &--hidden {
